<resources>
    <string name="app_name">Nearby-Alumni</string>
    <string name="default_string">default</string>
    <string name="sort">排序方式</string>
    <string name="search_friend">搜索用户</string>
    <string name="ServerBaseUrl">http://sannmizu.picp.net:22105/</string>
    <string name="connect_aes_key">connect_aes_key</string>
    <string name="connect_aes_iv">connect_aes_iv</string>
    <string name="register_input_username_hint">手机号或邮箱</string>
    <string name="register_sms_auth_code">验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="login_register_hint">注册</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_userid_hint">用户id</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="register_done_hint">完成</string>
    <string name="retrieve_pwd_step_hint">重置密码</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码</string>
    <string name="retrieve_pwd_email_label">点击这里</string>
    <string name="login_other_hint">其他方式登陆</string>
    <string name="reset_pwd_hint">请至少输入六位新密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="baseurl">https://app.cloopen.com:8883</string>
    <string name="ziliao">返回主页</string>
    <string name="qianming">个性签名</string>
    <string name="guanyu1">亲爱的用户你好：本app的功能是可以帮助你寻找你当前坐标下离你比较近的人，你可以通过app看到他的信息还可以加他为好友这样你们就可以聊天以便于我们的交友</string>
    <string name="help">亲爱的用户你好：如果你对本产品有什么问题无法解决或者碰到了什么重大BUG，可以尝试着联系我们的客服 QQ：749921682</string>
</resources>
